--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,14 +1,35 @@
-# 1. Clone the repository
-git clone https://github.com/XPRO-BOTZ-OFC/ANJU-XPRO-V5
+name: Queen Anju Bot Loop Runner
 
-# 2. Navigate to the project directory
-cd ANJU-XPRO-V5
+on:
+  workflow_dispatch:
 
-# 3. Install dependencies
-npm install
+jobs:
+  loop-task:
+    runs-on: ubuntu-latest
 
-# 4. Configure environment variables
-cp .env.example .env
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-# 5. Start the bot
-npm start
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run Bot (loop & auto-restart if crash)
+        run: |
+          echo "Running Queen Anju bot in auto-restart mode..."
+          timeout 18000 bash -c 'while true; do node start.js || echo "Bot crashed, restarting..."; sleep 2; done'
+
+      - name: Re-Trigger Workflow
+        if: always()
+        run: |
+          echo "Re-running workflow..."
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/loop-runner.yml/dispatches \
+            -d '{"ref":"main"}'
